update kudu example to use TLS

--- a/kafka-kudu-spark-streaming-example/files/client.properties
+++ b/kafka-kudu-spark-streaming-example/files/client.properties
@@ -1,5 +1,5 @@
 sasl.kerberos.service.name = kafka
 sasl.mechanism = GSSAPI
-security.protocol = SASL_PLAINTEXT
+security.protocol = SASL_SSL
 sasl.jaas.config=com.sun.security.auth.module.Krb5LoginModule required \
         useTicketCache=true;
